--- a/Autenticacion/Modulos/Login/templates/cambiar_clave.html
+++ b/Autenticacion/Modulos/Login/templates/cambiar_clave.html
@@ -2,39 +2,45 @@
 {% load static %}
 
 
-     {% block title %}
-    <title>Clave Nueva</title>
-    {% endblock %}
+{% block title %}
+<title>Clave Nueva</title>
+{% endblock %}
 
-    {% block main %}
-
-            <div class="container">
-                <form method="POST" class="form pass">
-                    {% csrf_token %}
-                    <h2>Contraseña Nueva</h2>
-                    <div class="box">
-                        <div class="inputBox">
-                            {{ form.password1 }}
-                            <i class="fa-solid fa-lock" id="emoji"></i>
-                             <span id="toggleBtn1"></span>
-                            <span class='spa'>Contraseña</span>
-                        </div>
-                    </div>
-                    <div class="box">
-                        <div class="inputBox">
-                            {{ form.password2 }}
-                            <i class="fa-solid fa-lock " id="emoji"></i>
-                             <span id="toggleBtn"></span>
-                            <span class='spa'>Confirmar contraseña</span>
-                        </div>
-                    </div>
-                    <div class="inputBox">
-                        <input type="submit" value="Cambiar">
-                    </div>
-                 </form>
+{% block main %}
+<img class="wave" src="{% static 'img/wave4.png' %}">
+<div class="container">
+    <div class="img">
+        <img src="{% static 'img/illustrationch.svg' %}" height="400">
+    </div>
+    <div class="change-pass-content">
+        <form method="POST" class="form pass">
+            {% csrf_token %}
+            <h2 class="title">Restablecer contraseña</h2>
+            <div class="input-div pass">
+                <div class="i">
+                    <i class="fa-solid fa-lock"></i>
+                </div>
+                <div class="div">
+                    <h5>Contraseña</h5>
+                    {{ form.password1 }}
+                </div>
+            </div>
+            <div class="input-div pass2">
+                <div class="i">
+                    <i class="fa-solid fa-lock"></i>
+                </div>
+                <div class="div">
+                    <h5>Confirmar contraseña</h5>
+                    {{ form.password2 }}
+                </div>
             </div>
 
-        {% block JS %}
-             <script src="{% static 'validar_login.js' %}"></script>
-        {% endblock %}
-    {% endblock %}
+            <input type="submit" class="btn" value="Cambiar contraseña">
+        </form>
+    </div>
+</div>
+
+{% block JS %}
+<script src="{% static 'validar_login.js' %}"></script>
+{% endblock %}
+{% endblock %}
