--- a/Autenticacion/Modulos/Login/templates/olvidar_clave.html
+++ b/Autenticacion/Modulos/Login/templates/olvidar_clave.html
@@ -50,7 +50,7 @@ Olvidar Clave
     </div>
 </div>
 
-<script>
+{% comment %} <script>
     // Espera 5 segundos y luego oculta el mensaje
     setTimeout(function() {
         const messages = document.querySelectorAll('.message');
@@ -59,7 +59,7 @@ Olvidar Clave
         });
     }, 3000)
 
-</script>
+</script> {% endcomment %}
 
 
 
