--- a/Autenticacion/Modulos/Login/templates/login.html
+++ b/Autenticacion/Modulos/Login/templates/login.html
@@ -63,10 +63,14 @@
 	</div>
 	{% endblock %}
 
-	<script type="text/javascript" src="{% static 'js/main.js' %}"></script>
-	<script src="https://kit.fontawesome.com/6f24398be6.js" crossorigin="anonymous"></script>
+
 	{% block JS %}
+		<script type="text/javascript" src="{% static 'js/main.js' %}"></script>
+		<script src="https://kit.fontawesome.com/6f24398be6.js" crossorigin="anonymous"></script>
+		<script src="{% static 'js/ocultar_errores.js'%}"></script>
+		<script src="{% static 'js/validaciones.js' %}"></script>
 	{% endblock %}
+	
 </body>
 
 </html>
