--- a/Autenticacion/Modulos/Login/templates/registro.html
+++ b/Autenticacion/Modulos/Login/templates/registro.html
@@ -13,7 +13,20 @@
         <form method="post">	
             {% csrf_token %}
             
-            
+            {% if form.password2.errors %}
+                <div class="error-message" >
+                    {% for error in form.password2.errors %}
+                        <p>{{ error }}</p>
+                    {% endfor %}
+                </div>
+            {% endif %}
+            {% if form.cedula.errors %}
+                <div class="error-message" >
+                    {% for error in form.cedula.errors %}
+                        <p>{{ error }}</p>
+                    {% endfor %}
+                </div>
+            {% endif %}
             <h2 class="title">Crear Personal</h2>
                 <div class="input-div one">
                     <div class="i">
@@ -31,6 +44,7 @@
                     <div class="div">
                         <h5>Cédula</h5>
                         {{ form.cedula }}
+                        
                     </div>
                 </div>
                 <div class="input-div email">
@@ -58,6 +72,7 @@
                     <div class="div">
                         <h5>Repetir contraseña</h5>
                         {{ form.password2 }}
+                        
                     </div>
                 </div>
                 <div class="input-div select">
@@ -78,7 +93,9 @@
         <img src="{% static 'img/illustrationr.svg' %}">
     </div>
 </div>
-   
+    
+ 
+
 {% endblock %}
 
 
