--- a/Autenticacion/Modulos/Login/templates/login.html
+++ b/Autenticacion/Modulos/Login/templates/login.html
@@ -29,7 +29,7 @@
 				<div style='font-size: 1.2em'>
 					{% if messages %}
 						{% for message in messages %}
-							<div style="padding: 10px; margin: 10px 0; border-radius: 5px; 
+							<div class="message" style="padding: 10px; margin: 10px 0; border-radius: 5px; 
 										{% if message.tags == 'error' %} background-color: #ffcccc; color: #d8000c; {% endif %}
 										{% if message.tags == 'success' %} background-color: #aee17a; color: #005700; {% endif %}">
 								{{ message }}
