--- a/Autenticacion/Modulos/Login/templates/registro.html
+++ b/Autenticacion/Modulos/Login/templates/registro.html
@@ -12,7 +12,15 @@
     <div class="regist-content">
         <form method="post">	
             {% csrf_token %}
-            
+            {% if messages %}
+                {% for message in messages %}
+                    <div class="message" style="padding: 10px; margin: 10px 0; border-radius: 5px; 
+                        {% if message.tags == 'error' %} background-color: #ffcccc; color: #d8000c; {% endif %}
+                        {% if message.tags == 'success' %} background-color: #aee17a; color: #005700; {% endif %}">
+                        {{ message }}
+                    </div>
+                {% endfor %}
+            {% endif %}
             {% if form.password2.errors %}
                 <div class="error-message" >
                     {% for error in form.password2.errors %}
