--- a/Autenticacion/Modulos/Login/templates/registro.html
+++ b/Autenticacion/Modulos/Login/templates/registro.html
@@ -8,7 +8,7 @@
 
 {% block main %}
 <img class="wave" src="{% static 'img/wave2.png' %}">
-<div class="container">
+<div class="container-regist">
     <div class="regist-content">
         <form method="post">	
             {% csrf_token %}
@@ -36,6 +36,7 @@
                 </div>
             {% endif %}
             <h2 class="title">Crear Personal</h2>
+            <div class="form-grid"> <!-- Contenedor de Grid -->
                 <div class="input-div one">
                     <div class="i">
                         <i class="fa-solid fa-user"></i>
@@ -47,12 +48,29 @@
                 </div>
                 <div class="input-div one">
                     <div class="i">
+                        <i class="fa-solid fa-circle-user"></i>
+                    </div>
+                    <div class="div">
+                        <h5>Nombre</h5>
+                        {{ form.nombre }}
+                    </div>
+                </div>
+                <div class="input-div one">
+                    <div class="i">
+                        <i class="fa-solid fa-circle-user"></i>
+                    </div>
+                    <div class="div">
+                        <h5>Apellido</h5>
+                        {{ form.apellido }}
+                    </div>
+                </div>
+                <div class="input-div one">
+                    <div class="i">
                         <i class="fa-solid fa-id-card"></i>
                     </div>
                     <div class="div">
                         <h5>Cédula</h5>
-                        {{ form.cedula }}
-                        
+                        {{ form.cedula }} 
                     </div>
                 </div>
                 <div class="input-div email">
@@ -91,15 +109,13 @@
                         <h5>Rol</h5>
                         {{ form.rol }}
                     </div>
-                </div>
-            
-            <!-- Fin del nuevo campo -->
+                </div>     
+            </div>
+                <!-- Fin del nuevo campo -->
             <input type="submit" class="btn" value="Registrar">
         </form>
     </div>
-    <div class="img">
-        <img src="{% static 'img/illustrationr.svg' %}">
-    </div>
+
 </div>
     
  
