--- a/Autenticacion/templates/index.html
+++ b/Autenticacion/templates/index.html
@@ -1,48 +1,109 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="es">
+{% load static %}
+
 <head>
-
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    {% load static %}
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-          rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-          crossorigin="anonymous">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
-          rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
-          crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static 'css/estilo.css' %}">
-    <link rel="stylesheet" href="{% static 'css/navbar.css' %}">
-    <link rel="stylesheet" href="{% static 'css/tooltips.css' %}">
-    <link href="https://cdn.jsdelivr.net/npm/remixicon@2.2.0/fonts/remixicon.css" rel="stylesheet">
-    <link rel="icon" href="{% static 'img/icon.ico' %}" type="png" sizes="32x32">
-    {% block java %}
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Inicio</title>
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    {% block css %}
+    <link rel="stylesheet" href="{% static 'css/modulos.css' %}">
     {% endblock %}
+    <!-- Fuente -->
+    <link href="https://fonts.googleapis.com/css2?family=Arima:wght@100..700&display=swap" rel="stylesheet">
+    <!-- CSS - Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.lineicons.com/4.0/lineicons.css" />
+    <!-- CSS - Boxicons -->
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="icon" href="{% static 'img/logo_alcaldia_milagro_ico.ico' %}" type="image/x-icon">
 
-    {% block title %}
-        <title> Labyrinth D.S </title>
-    {% endblock %}
 </head>
 
-   <header>
-    {% block header %}
-        {% include 'navbar.html' %}
-    {% endblock %}
-    </header>
 <body>
-{% block main %}
-    
+    <header>
+        {% include 'navbar.html' %}
+    </header>
+    {% block main %}
+    <div class="cards-container">
+        <main class="cards">
+            <div class="card">
+                <div class="card-img-top">
+                    <i class="fa-solid fa-box-tissue"></i>
+                </div>
+                <div class="card-body">
+                    <p class="card-text"> Reportes del personal </p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="img-container">
+                    <img src="{% static 'img/modulos/Registro de Personal.png' %}" class="card-img-top"
+                        alt="Icono ubicacion">
+                </div>
+                <div class="card-body">
+                    <p class="card-text"> Registro de personal </p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="img-container">
+                    <img src="{% static 'img/modulos/Ubicacion.png' %}" class="card-img-top" alt="Icono ubicacion">
+                </div>
+                <div class="card-body">
+                    <p class="card-text"> Ubicación </p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="img-container">
+                    <img src="{% static 'img/modulos/Rol.png' %}" class="card-img-top" alt="Icono ubicacion">
+                </div>
+                <div class="card-body">
+                    <p class="card-text"> Rol </p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="img-container">
+                    <img src="{% static 'img/modulos/Rol.png' %}" class="card-img-top" alt="Icono ubicacion">
+                </div>
+                <div class="card-body">
+                    <p class="card-text"> Novedades </p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="img-container">
+                    <img src="{% static 'img/modulos/Rol.png' %}" class="card-img-top" alt="Icono ubicacion">
+                </div>
+                <div class="card-body">
+                    <p class="card-text"> Tipo de Novedades </p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="img-container">
+                    <img src="{% static 'img/modulos/Rol.png' %}" class="card-img-top" alt="Icono ubicacion">
+                </div>
+                <div class="card-body">
+                    <p class="card-text"> Planificación </p>
+                </div>
+            </div>
 
-        
-
-{% endblock %}
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        </main>
+    </div>
+    {% endblock %}
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/1a76f9833f.js" crossorigin="anonymous"></script>
+    <!-- JS - Bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
         crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+        crossorigin="anonymous"></script>
+    <script src="{% static 'js/main.js' %}"></script>
 
-{% block js %}
+    {% block js %}
 
-{% endblock %}
+    {% endblock %}
 </body>
+
 </html>
