--- a/Autenticacion/templates/sidebar.html
+++ b/Autenticacion/templates/sidebar.html
@@ -19,7 +19,7 @@
             <li>
                 <a class="nav-link active" href="#">
                     <i class="fa-solid fa-users"></i>
-                    <span class="nav-item"> Listado de personal </span>
+                    <span class="nav-item"> Registro de personal </span>
                 </a>
                 <span class="tooltip"> Listado de personal </span>
             </li>
