--- a/Autenticacion/static/css/modulos.css
+++ b/Autenticacion/static/css/modulos.css
@@ -14,23 +14,38 @@
     justify-content: center;
 }
 
-.cards i{
-    font-size: 8rem;
+.cards .card i{
+    font-size: 5rem;
     align-items: center;
-    padding-bottom: 30px;
+    padding: 20px;
 }
 .card{
-    width: 100%;
     text-align: center;
+    transition: all 0.5s ease;
+    cursor: pointer;
+}
+
+.cards > a{
+    color: inherit;
+    text-decoration: none;
+    display: block;
+    height: 100%;
+    width: 100%;
 }
 
 .card .img-container{
     padding: 10px;
     justify-content: center;
 }
+
+.card:hover{
+    
+    transform: translate(2px, 2px);
+}
+/* 
 .card img{
     width: 150px;
-}
+} */
 
 .card .card-body{
     background-color: #12171e;
