--- a/Autenticacion/Modulos/Coordinador/Novedad/templates/novedad.html
+++ b/Autenticacion/Modulos/Coordinador/Novedad/templates/novedad.html
@@ -1,8 +1,56 @@
 {% extends 'modulos.html' %}
 {% load static %}
+
+
 {% block title %}
 Modulo Novedad
 {% endblock %}
-{% block content %}
-    PRUEBA - NOVEDAD
+
+{% block btnTitle %}
+Adicionar novedad
 {% endblock %}
+
+{% block thead %}
+<th> Descripción </th>
+<th> Tipo de Novedad </th>
+<th> Estado </th>
+<th> Acciones </th>
+{% endblock %}
+
+{% block tbody %}
+<tr>
+    <th scope="row">1</th>
+    <td>Mark</td>
+    <td>Otto</td>
+    <td>@mdo</td>
+    <td>
+        <a href="#" class="btn-edit"> <i class="fa-duotone fa-solid fa-pen"></i> </a>
+
+        <a href="#" class="btn-delete"> <i class="fa-solid fa-trash"></i> </a>
+    </td>
+</tr>
+<tr class="highlight-row">
+    <th scope="row">2</th>
+    <td>Jacob</td>
+    <td>Thornton</td>
+    <td>@fat</td>
+    <td>
+        <a href="#" class="btn-edit"> <i class="fa-duotone fa-solid fa-pen"></i> </a>
+
+        <a href="#" class="btn-delete"> <i class="fa-solid fa-trash"></i> </a>
+    </td>
+</tr>
+<tr>
+    <th scope="row">3</th>
+    <td>Larry</td>
+    <td>Bird</td>
+    <td>@twitter</td>
+    <td>
+        <a href="#" class="btn-edit"> <i class="fa-duotone fa-solid fa-pen"></i> </a>
+
+        <a href="#" class="btn-delete"> <i class="fa-solid fa-trash"></i> </a>
+    </td>
+</tr>
+
+{% endblock %}
+
