--- a/Autenticacion/templates/form.html
+++ b/Autenticacion/templates/form.html
@@ -1,9 +1,20 @@
+{% extends 'modulos.html' %}
+{% load static %}
+
+{% block header %}
+{% endblock %}
+
+{% block sidebar %}
+{% endblock %}
+
+
+{% block forms %}
 <form class="container text-dark" method="post" action="{{ action_save }}" enctype="multipart/form-data"
     name="registro">
     {% csrf_token %}
     <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
-            <div class="modal-header bg-primary">
+            <div class="modal-header bg-dark">
                 <h3 class="text-center text-white">
                     {{ titulo }}
                 </h3>
@@ -15,15 +26,16 @@
         </div>
     </div>
     {% block boton %}
-    <div class="col cent">
+    <div class="text-center">
         <button type="submit" class="btn btn-success btn-lg me-md-5">
             Guardar registro
         </button>
-        <a href="{{ listar_url }}" class="btn btn-danger btn-lg">
+        <a href="{{cancelar}}" class="btn btn-danger btn-lg">
             Cancelar
         </a>
     </div>
 
     {% endblock %}
-
 </form>
+
+{% endblock %}
