--- a/Autenticacion/Modulos/Login/templates/registro.html
+++ b/Autenticacion/Modulos/Login/templates/registro.html
@@ -1,39 +1,43 @@
-{% extends 'login.html' %}
+{% extends 'modulos.html' %}
 {% load static %}
 
+{% block css %}
+<link rel="stylesheet" type="text/css" href="{% static 'css/diseño.css' %}">
+{% endblock %}
+
 {% block title %}
-    Registro
+Registro
 {% endblock %}
 
 
-{% block main %}
+{% block forms %}
 <img class="wave" src="{% static 'img/wave2.png' %}">
 <div class="container-regist">
     <div class="regist-content">
-        <form method="post">	
+        <form method="post">
             {% csrf_token %}
             {% if messages %}
-                {% for message in messages %}
-                    <div class="message" style="padding: 10px; margin: 10px 0; border-radius: 5px; 
+            {% for message in messages %}
+            <div class="message" style="padding: 10px; margin: 10px 0; border-radius: 5px; 
                         {% if message.tags == 'error' %} background-color: #ffcccc; color: #d8000c; {% endif %}
                         {% if message.tags == 'success' %} background-color: #aee17a; color: #005700; {% endif %}">
-                        {{ message }}
-                    </div>
-                {% endfor %}
+                {{ message }}
+            </div>
+            {% endfor %}
             {% endif %}
             {% if form.password2.errors %}
-                <div class="error-message" >
-                    {% for error in form.password2.errors %}
-                        <p>{{ error }}</p>
-                    {% endfor %}
-                </div>
+            <div class="error-message">
+                {% for error in form.password2.errors %}
+                <p>{{ error }}</p>
+                {% endfor %}
+            </div>
             {% endif %}
             {% if form.cedula.errors %}
-                <div class="error-message" >
-                    {% for error in form.cedula.errors %}
-                        <p>{{ error }}</p>
-                    {% endfor %}
-                </div>
+            <div class="error-message">
+                {% for error in form.cedula.errors %}
+                <p>{{ error }}</p>
+                {% endfor %}
+            </div>
             {% endif %}
             <h2 class="title">Crear Personal</h2>
             <div class="form-grid"> <!-- Contenedor de Grid -->
@@ -70,7 +74,7 @@
                     </div>
                     <div class="div">
                         <h5>Cédula</h5>
-                        {{ form.cedula }} 
+                        {{ form.cedula }}
                     </div>
                 </div>
                 <div class="input-div email">
@@ -83,43 +87,41 @@
                     </div>
                 </div>
                 <div class="input-div pass">
-                    <div class="i"> 
+                    <div class="i">
                         <i class="fa-solid fa-lock"></i>
                     </div>
                     <div class="div">
-                       <h5>Contraseña</h5>
-                       {{ form.password1 }}
+                        <h5>Contraseña</h5>
+                        {{ form.password1 }}
                     </div>
                 </div>
-               <div class="input-div pass">
-                    <div class="i"> 
+                <div class="input-div pass">
+                    <div class="i">
                         <i class="fa-solid fa-lock"></i>
                     </div>
                     <div class="div">
                         <h5>Repetir contraseña</h5>
                         {{ form.password2 }}
-                        
+
                     </div>
                 </div>
                 <div class="input-div select">
-                    <div class="i"> 
+                    <div class="i">
                         <i class="fa-solid fa-lock"></i>
                     </div>
                     <div class="div">
                         <h5>Rol</h5>
                         {{ form.rol }}
                     </div>
-                </div>     
+                </div>
             </div>
-                <!-- Fin del nuevo campo -->
+            <!-- Fin del nuevo campo -->
             <input type="submit" class="btn" value="Registrar">
         </form>
     </div>
 
 </div>
-    
- 
+
+
 
 {% endblock %}
-
-
