--- a/Autenticacion/templates/index.html
+++ b/Autenticacion/templates/index.html
@@ -23,9 +23,11 @@
 </head>
 
 <body>
+    {% block header %}
     <header>
         {% include 'navbar.html' %}
     </header>
+    {% endblock %}
     {% block main %}
     <div class="cards-container">
         <main class="cards">
@@ -49,7 +51,7 @@
                     </div>
                 </div>
             </a>
-            <a href="#">
+            <a href="{% url 'login:registro' %}">
                 <div class="card">
                     <div class="img-container">
                         <i class="fa-solid fa-users"></i>
@@ -69,7 +71,7 @@
                     </div>
                 </div>
             </a>
-            <a href="#">
+            <a href="{% url 'novedad:inicio_tipoNov' %}">
                 <div class="card">
                     <div class="img-container">
                         <i class="fa-solid fa-list-ul"></i>
