--- a/Autenticacion/Modulos/Login/templates/cambiar_clave.html
+++ b/Autenticacion/Modulos/Login/templates/cambiar_clave.html
@@ -31,7 +31,7 @@ Restablecer Clave
                 <div class="div">
                     <h5>Contraseña</h5>
                     {{ form.password1 }}
-                   
+                    <span id="toggleBtnNueva"></span>
                 </div>
             </div>
             <div class="input-div pass2">
@@ -41,7 +41,7 @@ Restablecer Clave
                 <div class="div">
                     <h5>Confirmar contraseña</h5>
                     {{ form.password2 }}
-                    
+                    <span id="toggleBtnNuevaConf"></span>
                 </div>
             </div>
             <input type="submit" class="btn" value="Cambiar contraseña">
