--- a/Autenticacion/Modulos/Login/templates/olvidar_clave.html
+++ b/Autenticacion/Modulos/Login/templates/olvidar_clave.html
@@ -43,7 +43,7 @@ Olvidar Clave
                 </div>
             </div>
             <div class="links">
-                <p><a href="{% url 'login' %}" class="volver">Regresar</a></p>
+                <p><a href="{% url 'login:login' %}" class="volver">Regresar</a></p>
             </div>
             
         </form>
