--- a/Autenticacion/Modulos/Login/templates/cambiar_clave_primera_sesion.html
+++ b/Autenticacion/Modulos/Login/templates/cambiar_clave_primera_sesion.html
@@ -31,6 +31,7 @@ Cambiar Clave
                 <div class="div">
                     <h5>Contraseña actual</h5>
                     {{ form.password_actual}}
+                    <span id="toggleBtnActual"></span>
                 </div>
             </div>
             <div class="input-div pass">
@@ -40,7 +41,7 @@ Cambiar Clave
                 <div class="div">
                     <h5>Nueva contraseña</h5>
                     {{ form.password1 }}
-                   
+                    <span id="toggleBtnNueva"></span>
                 </div>
             </div>
             <div class="input-div pass2">
@@ -50,7 +51,7 @@ Cambiar Clave
                 <div class="div">
                     <h5>Confirmar contraseña</h5>
                     {{ form.password2 }}
-                    
+                    <span id="toggleBtnNuevaConf"></span>
                 </div>
             </div>
             <input type="submit" class="btn" value="Cambiar contraseña">
@@ -58,6 +59,9 @@ Cambiar Clave
         </form>
     </div>
 </div>
+
+
+
 {% endblock %}
 
 
