--- a/Autenticacion/Modulos/Login/templates/correo_enviado.html
+++ b/Autenticacion/Modulos/Login/templates/correo_enviado.html
@@ -12,12 +12,12 @@
       <!-- Cuerpo del mensaje -->
       <tr>
         <td style="padding: 30px; text-align: center; color: #333333;">
-          <h2 style="font-size: 22px; color: #333333;">Hola {{ user.username }}</h2>
+          <h2 style="font-size: 22px; color: #333333;">Hola, {{ user.username }}.</h2>
           <p style="font-size: 16px; line-height: 1.6; color: #555555; margin: 20px 0;">
             Has solicitado restablecer tu contraseña. Haz clic en el siguiente botón para cambiarla:
           </p>
           <p style="margin: 30px 0;">
-            <a href="{{ protocol }}://{{ domain }}{% url 'restablecer_clave' uidb64=uid token=token %}" 
+            <a href="{{ protocol }}://{{ domain }}{% url 'login:restablecer_clave' uidb64=uid token=token %}" 
                style="display: inline-block; background-color: #4CAF50; color: #ffffff; padding: 12px 30px; font-size: 16px; text-decoration: none; border-radius: 5px;">
               Restablecer Contraseña
             </a>
