--- a/Autenticacion/templates/modulos.html
+++ b/Autenticacion/templates/modulos.html
@@ -43,5 +43,7 @@
 <div class="modal fade" id="insertar" role="dialgo"></div>
 
 <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+<script src="https://kit.fontawesome.com/6f24398be6.js" crossorigin="anonymous"></script>
 <script src="{% static 'js/modal.js' %}"></script>
+<script src="{% static "js/hide_show_passw.js" %}"></script>
 {% endblock %}
