Pantalla registro corregida

--- a/Autenticacion/Modulos/Login/templates/login.html
+++ b/Autenticacion/Modulos/Login/templates/login.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 {% load static %}
-<html>
+<html lang="es">
 
 <head>
 	<title>
@@ -12,9 +12,7 @@
 	<link rel="stylesheet" type="text/css" href="{% static 'css/diseño.css' %}">
 	<link href="https://fonts.googleapis.com/css2?family=Arima:wght@100..700&display=swap" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	{% block head %}
 
-	{% endblock %}
 </head>
 
 <body>
