--- a/Autenticacion/Modulos/Login/templates/registro.html
+++ b/Autenticacion/Modulos/Login/templates/registro.html
@@ -1,13 +1,11 @@
 {% extends 'modulos.html' %}
 {% load static %}
 
-{% block css %}
-<link rel="stylesheet" type="text/css" href="{% static 'css/diseño.css' %}">
-{% endblock %}
 
 {% block title %}
 Registro
 {% endblock %}
+
 
 
 {% block forms %}
@@ -108,7 +106,7 @@ Registro
                 </div>
                 <div class="input-div select">
                     <div class="i">
-                        <i class="fa-solid fa-lock"></i>
+                        <i class="fa-solid fa-user-plus"></i>
                     </div>
                     <div class="div">
                         <h5>Rol</h5>
