--- a/Autenticacion/static/css/diseño.css
+++ b/Autenticacion/static/css/diseño.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 
-body{
+body, .regist-content{
     font-family: 'Arima', sans-serif;
 	overflow: hidden;
 }
@@ -25,26 +25,21 @@ body{
 }
 
 .container-regist {
-	height: 100vh;
-	width: 770px;
 	display: flex;
-	justify-content: end;
+	justify-content: center;
 	align-items: center;
 	text-align: center;
-	padding: 60px; /* Espacio interno */
-	bottom: 20px;
-	
+	width: 100%;
+
 }
+
 
 .form-grid {
     display: grid;
     grid-template-columns: repeat(4, 1fr); 
-    gap: 10px 40px;
-
+    gap: 5px 40px;
+    
 }
-
-
-
 
 .img {
 	display: flex;
@@ -66,11 +61,12 @@ body{
 	
 }
 
-
-
+.regist-content form {
+	width: 900px;
+}
 
 form{
-	width: 450px;
+	width: 360px;
 }
 
 
@@ -230,7 +226,6 @@ a{
 	display: block;
 	text-align: right;
 	text-decoration: none;
-	margin-top: 6px;
 	color: #999;
 	font-size: 0.9rem;
 	transition: .3s;
@@ -240,7 +235,7 @@ a:hover{
 	color: #12171e;
 }
 
-.btn{
+.btn, .regist-content .btn{
 	display: block;
 	width: 100%;
 	height: 50px;
@@ -256,7 +251,7 @@ a:hover{
 	cursor: pointer;
 	transition: .5s;
 }
-.btn:hover{
+.btn:hover, .regist-content .btn:hover{
 	background-position: right;
 	color: #fff
 }
