--- a/Autenticacion/static/css/style_tabla.css
+++ b/Autenticacion/static/css/style_tabla.css
@@ -1,7 +1,7 @@
 /* Estilos personalizados */
 body {
     background-color: #f4f6f9;
-    font-family: 'Arial', sans-serif;
+    font-family: 'Arima', sans-serif;
 }
 
 .table-container {
