--- a/Autenticacion/templates/index.html
+++ b/Autenticacion/templates/index.html
@@ -4,14 +4,21 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> {% block title %} Inicio  {% endblock %} </title>
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    {% block css %}
-    <link rel="stylesheet" href="{% static 'css/modulos.css' %}">
-    {% endblock %}
-    <!-- Fuente -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title> 
+        {% block title %} 
+            Inicio  
+        {% endblock %} 
+    </title>
+    <!-- Fuente de letra de google -->
     <link href="https://fonts.googleapis.com/css2?family=Arima:wght@100..700&display=swap" rel="stylesheet">
+
+    {% block css %}
+        <link rel="stylesheet" href="{% static 'css/diseño.css' %}">
+        <link rel="stylesheet" href="{% static 'css/modulos.css' %}">
+        <link rel="stylesheet" href="{% static 'css/style.css' %}">
+        <link rel="stylesheet" href="{% static 'css/style_tabla.css' %}">     
+    {% endblock %}
     <!-- CSS - Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
