--- a/Autenticacion/templates/modulos.html
+++ b/Autenticacion/templates/modulos.html
@@ -1,9 +1,6 @@
 {% extends 'index.html' %}
 {% load static %}
 
-{% block css %}
-<link rel="stylesheet" href="{% static 'css/style_tabla.css' %}">
-{% endblock %}
 
 {% block main %}
 <div class="content">
@@ -38,12 +35,13 @@
             </div>
         </div>
     </main>
+    {% endblock %}
 </div>
-{% endblock %}
+
 <div class="modal fade" id="insertar" role="dialgo"></div>
 
 <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 <script src="https://kit.fontawesome.com/6f24398be6.js" crossorigin="anonymous"></script>
 <script src="{% static 'js/modal.js' %}"></script>
-<script src="{% static "js/hide_show_passw.js" %}"></script>
+<script src="{% static 'js/hide_show_passw.js' %}"></script>
 {% endblock %}
