Mejoras en diseño

--- a/Autenticacion/static/css/style.css
+++ b/Autenticacion/static/css/style.css
@@ -121,6 +121,37 @@ body {
     left: 80px;
 }
 
+@media (max-width: 875px) {
+    /* Mostrar el sidebar superpuesto sobre el contenido */
+    .side-bar {
+        position: fixed;
+        top: 0;
+        left: 0;
+        height: 100vh;
+        width: 250px; /* Puedes ajustar este ancho según tu preferencia */
+        transform: translateX(-250px);
+        transition: transform var(--transition-speed) ease;
+        z-index: 1000; /* Para asegurarte de que esté sobre el contenido */
+        display: block;
+    }
+
+    /* Cuando el sidebar está activo, muéstralo completamente */
+    .side-bar.active {
+        transform: translateX(0);
+    }
+
+    /* El contenido principal se ajusta cuando el sidebar está activo */
+    .main-content {
+        transition: margin-left var(--transition-speed) ease;
+        margin-left: 0; /* Resetear el margen en pantallas pequeñas */
+    }
+
+    /* Cuando el sidebar está activo, oscurece el fondo del contenido principal para resaltar el sidebar */
+    .main-content.overlay {
+        background-color: rgba(0, 0, 0, 0.5);
+    }
+}
+
 
 
 /* UIVERSE.IO */
