--- a/Autenticacion/static/css/style_tabla.css
+++ b/Autenticacion/static/css/style_tabla.css
@@ -17,6 +17,12 @@ body {
     left: 65%;
 }
 
+@media (width < 875px){
+    .btn-add{
+        position: static;
+    }
+
+}
 .table-container h4{
     background: #12171e;
     padding: 10px;
