--- a/Autenticacion/templates/modulos.html
+++ b/Autenticacion/templates/modulos.html
@@ -22,7 +22,7 @@
             </a>
             
             <div class="table-container table-responsive">
-                <h4 class="text-center">{{ title_table }}</h4>
+                <h5 class="text-center">{{ title_table }}</h5>
                 <table class="table">
                     <thead>
                         <tr>
@@ -45,5 +45,5 @@
 <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 <script src="https://kit.fontawesome.com/6f24398be6.js" crossorigin="anonymous"></script>
 <script src="{% static 'js/modal.js' %}"></script>
-<script src="{% static "js/hide_show_passw.js" %}"></script>
+<script src="{% static 'js/hide_show_passw.js' %}"></script>
 {% endblock %}
