--- a/Autenticacion/static/css/modulos.css
+++ b/Autenticacion/static/css/modulos.css
@@ -1,7 +1,7 @@
 .cards-container {
     display: flex;
     justify-content: center;
-    padding: 20px;
+    padding: 80px 20px;
     align-items: center;
 }
 
