--- a/Autenticacion/Modulos/Login/templates/registro.html
+++ b/Autenticacion/Modulos/Login/templates/registro.html
@@ -6,7 +6,9 @@
 Registro
 {% endblock %}
 
-
+{% block css %}
+<link rel="stylesheet" href="{% static 'css/diseño.css' %}">
+{% endblock %}
 
 {% block forms %}
 
