--- a/Autenticacion/templates/index.html
+++ b/Autenticacion/templates/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     {% block css %} 
         <link rel="stylesheet" href="{% static 'css/modulos.css' %}">  
+        <link rel="stylesheet" href="{% static 'css/style_tabla.css' %}">   
     {% endblock %}
     <!-- CSS - Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
