Espero que no se cague el sistema

--- a/Autenticacion/Modulos/Coordinador/Novedad/templates/novedad.html
+++ b/Autenticacion/Modulos/Coordinador/Novedad/templates/novedad.html
@@ -7,7 +7,7 @@ Modulo Novedad
 {% endblock %}
 
 {% block btnTitle %}
-Adicionar novedad
+Registrar nueva novedad
 {% endblock %}
 
 {% block thead %}
