--- a/Autenticacion/Modulos/Coordinador/Novedad/templates/tipNov.html
+++ b/Autenticacion/Modulos/Coordinador/Novedad/templates/tipNov.html
@@ -7,7 +7,7 @@ Modulo Tipo Novedad
 {% endblock %}
 
 {% block btnTitle %}
-Adicionar tipo de Novedad
+Registrar nuevo tipo de Novedad
 {% endblock %}
 
 {% block thead %}
