--- a/Autenticacion/Modulos/Login/templates/registro.html
+++ b/Autenticacion/Modulos/Login/templates/registro.html
@@ -1,16 +1,8 @@
-{% extends 'modulos.html' %}
+{% extends 'form.html' %}
 {% load static %}
 
 
-{% block title %}
-Registro
-{% endblock %}
-
-{% block css %}
-<link rel="stylesheet" href="{% static 'css/diseño.css' %}">
-{% endblock %}
-
-{% block forms %}
+{% block controls %}
 
 <div class="container-regist">
     <div class="regist-content">
