--- a/Autenticacion/templates/form.html
+++ b/Autenticacion/templates/form.html
@@ -1,7 +1,9 @@
 {% extends 'modulos.html' %}
 {% load static %}
 
-
+{% block css %}
+<!-- <link rel="stylesheet" href="{% static 'css/diseño.css' %}"> -->
+{% endblock %}
 
 {% block header %}
 {% endblock %}
