--- a/Autenticacion/templates/sidebar.html
+++ b/Autenticacion/templates/sidebar.html
@@ -17,7 +17,7 @@
                 <span class="tooltip"> Lugares de Guardia </span>
             </li>
             <li>
-                <a class="nav-link active" href="{% url 'login:registro' %}">
+                <a class="nav-link active" href="{% url 'login:personal' %}">
                     <i class="fa-solid fa-users"></i>
                     <span class="nav-item"> Registro de personal </span>
                 </a>
