--- a/Autenticacion/static/css/style.css
+++ b/Autenticacion/static/css/style.css
@@ -29,6 +29,11 @@ body {
     flex-direction: row;
     
 }
+.navbar{
+    position: relative;
+}
+
+
 /* Sidebar */
 .side-bar {
     width: 250px;
