--- a/Autenticacion/templates/navbar.html
+++ b/Autenticacion/templates/navbar.html
@@ -1,6 +1,6 @@
 {% load static %}
 
-<nav class="navbar navbar-expand-lg bg-dark">
+<nav class="navbar navbar-expand-lg bg-dark sticky-top">
     <div class="container-fluid">
         <a href="/">
             <img src="{% static 'img/logo_alcaldia_milagro.png' %}" alt="MunicipioMilagro" class="p-1 mx-4" width="150px">
