--- a/Autenticacion/Modulos/Login/templates/login.html
+++ b/Autenticacion/Modulos/Login/templates/login.html
@@ -9,7 +9,7 @@
 		{% endblock %}
 	</title>
 	
-	<link rel="stylesheet" type="text/css" href="{% static 'css/diseño.css' %}">
+	<link rel="stylesheet" type="text/css" href="{% static 'css/diseño_auth.css' %}">
 	<link href="https://fonts.googleapis.com/css2?family=Arima:wght@100..700&display=swap" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
