--- a/Autenticacion/templates/index.html
+++ b/Autenticacion/templates/index.html
@@ -14,11 +14,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Arima:wght@100..700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    {% block css %} 
-        <link rel="stylesheet" href="{% static 'css/modulos.css' %}">  
-        <link rel="stylesheet" href="{% static 'css/style_tabla.css' %}">   
+    {% block css %}
+    <link rel="stylesheet" href="{% static 'css/modulos.css' %}">
+    <link rel="stylesheet" href="{% static 'css/style_tabla.css' %}">
     {% endblock %}
-    
+
     <!-- CSS - Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -111,10 +111,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
         integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
         crossorigin="anonymous"></script>
+
     <script src="{% static 'js/main.js' %}"></script>
-
     {% block js %}
-
+    <script src="{% static 'js/jsprueba.js' %}"></script>
     {% endblock %}
 </body>
 
